chore: pre-deployment cleanup - remove legacy and development artifacts
Backend:
- Delete deprecated Flask API (api.py) and test files
- Remove Flask, flask-cors from backend/requirements.txt
- Keep only pytest dependencies for testing

Source:
- Remove terminal_ui.py (CLI no longer used)
- Remove gemini_interaction.py (logic moved to api/ai_fallback.py)
- Remove __main__.py (CLI entry point superseded)

Documentation:
- Keep only DEPLOYMENT.md for production reference
- Remove MIGRATION_REPORT.md, GEMINI_API_FIX.md (internal docs)
- Remove IMPLEMENTATION_SUMMARY.md, QUICK_REFERENCE.md, etc.
- Remove markdown specification files (archived elsewhere)

Frontend:
- Remove frontend-specific README.md
- Remove eslint.config.js (not needed for Vercel)

Root:
- Remove README.md.backup
- Clean up __pycache__ and .pytest_cache directories

Result: Minimal, production-ready codebase with 10 Python files total
- api/: 5 serverless handlers + __init__.py
- src/: conversation.py (shared logic) + __init__.py
- tests/: 3 test files + conftest.py

All 37 tests passing ✅

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,4 @@
-flask==3.0.0
-flask-cors==4.0.0
-google-generativeai==0.3.2
-python-dotenv==1.0.0
-
-# Testing dependencies
+# Testing dependencies (Flask backend deprecated, use Vercel serverless)
 pytest==7.4.3
 pytest-mock==3.12.0
 
