--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,6 @@
 {
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "devCommand": "cd frontend && npm run dev",
-    "installCommand": "cd frontend && npm install",
-    "framework": null,
-    "regions": [
-        "iad1"
-    ],
-    "functions": {
-        "api/**/*.py": {
-            "runtime": "python3.9",
-            "maxDuration": 30
-        }
-    },
-    "env": {
-        "GEMINI_API_KEY": "@gemini_api_key"
-    }
+    "installCommand": "pip install -r requirements.txt",
+    "framework": null
 }
