fix: restore vercel.json configuration for proper deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,5 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "installCommand": "pip install -r requirements.txt",
-    "framework": null,
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/$1"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+    "framework": null
 }
