--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 ## Core web
 
 fastapi>=0.109.0,<1.0.0
-uvicorn[standard]>=0.27.0,<1.0.0
+uvicorn>=0.27.0,<1.0.0
+uvicorn[standard]>=0.27.0,<1.0.0  
 websockets>=12.0
 httptools>=0.6.0
 uvloop>=0.19.0; sys_platform != "win32"
