fix: update CORS and API configuration for production deployment
- Backend CORS: Added actual Vercel domain (openai-chatbot-eight.vercel.app)
- Frontend .env: Added documentation for local vs production
- Frontend .env.example: Added production URL reference

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,8 @@
 # Backend API Configuration
+# Local development:
 VITE_API_URL=http://localhost:8000
+# Production (set in Vercel dashboard):
+# VITE_API_URL=https://recollectlife-api.onrender.com
 
 # Application Configuration
 VITE_APP_NAME="Life Story Game"
